--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "framer-motion": "^10.12.16",
+    "onsenui": "^2.12.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-onsenui": "^1.13.2",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-snowfall": "^1.2.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
